# tree-sitter-format-string

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-format-string.pc.in  tree-sitter-format_string.h  tree-sitter-format_string.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_format_string/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFormatStringTests/: TreeSitterFormatStringTests.swift
examples/: format.txt
queries/: highlights.scm  python_injections.scm  rust_injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: main.txt
