[package]
name = "tree-sitter-format-string"
description = "FormatString grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "format-string"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ValdezFOmar/tree-sitter-format-string"
authors = ["Omar Valdez <omarantoniovaldezf2@gmail.com>"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
