[package]
name = "tree-sitter-format-string"
description = "FormatString grammar for tree-sitter"
version = "0.0.1"
authors = ["Omar Valdez <omarantoniovaldezf2@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "format-string"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/valdezfomar/tree-sitter-format-string"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
